--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -1,5 +1,19 @@
+* {
+    margin-top: 0;
+}
+
+header {
+    padding: 0;
+    margin-top: 0;
+    border-radius: 0;
+    background-color: #332288;
+}
+
 body {
     background-color: #6644FF;
+    font-family: sans-serif;
+    border-radius: 0;
+    margin: 0;
 }
 p {
     color: #FFFFFF;
