--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -4,13 +4,20 @@
 
 header {
     padding: 0;
-    margin-top: 0;
+    margin-top: 0px;
     border-radius: 0;
-    background-color: #332288;
+    background-color: #5b295c;
+    margin-bottom: 0;
 }
 
+menu {
+    background-color: #994377;
+    margin-bottom: 0;
+}
+
+
 body {
-    background-color: #6644FF;
+    background-color: #4818A6;
     font-family: sans-serif;
     border-radius: 0;
     margin: 0;
@@ -25,10 +32,16 @@ li {
     color: #FFFFFF;
 }
 h1 {
-    color: #FFFFFF;
+    color: #3388ff;
+    font-size: 400%;
+    text-align: center;
+    margin-top: 0px;
+    animation-name: demo;
+    animation-duration: 2s;
 }
 h2 {
-    color: #FFFFFF
+    color: #FFFFFF;
+    font-size: 200%;
 }
 a {
     color: #FFFF00
@@ -37,4 +50,37 @@ a {
     width: 500px;
     height: 300px;
     background-color: #d923c0;
+}
+
+@keyframes demo {
+    from{
+        font-size: 0%;
+    }
+
+    80%{
+        font-size: 405%;
+    }
+    to{
+        font-size: 400%;
+    }
+}
+
+#navigator {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.nav-option {
+    flex: 1;
+    text-align: center;
+    border-color: #000000;
+    border-top-width: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#navigator-nav {
+    align-items: center;
+    border: 10px;
+    padding: 10px;
 }
