--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -102,6 +102,8 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 30px;
+    padding-top: 20px;
 }
 
 #sellout-kid {
