--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -47,6 +47,7 @@ h2 {
     color: #3388ff;
     font-size: 300%;
     text-align: center;
+    margin-bottom: 5px;
 
 }
 a {
@@ -243,4 +244,22 @@ a {
 .post-pic-div span {
     flex:1;
     text-align: center;
+}
+
+.onlinicity {
+    color: #3388ff;
+    font-size: 250%;
+    text-align: center;
+    margin-bottom: 7px;
+}
+
+.list-of-friends {
+    color:#FF00FF;
+    text-align: center;
+    font-size: 175%;
+    display:flex;
+    flex-direction: column;
+}
+.friend {
+    color:#FF00FF;
 }
