--- a/HTML/src/app.css
+++ b/HTML/src/app.css
@@ -3,8 +3,9 @@
 }
 
 hr {
-    margin: 1px;
-    border: 0px;
+    opacity: 1;
+    border-style: inset;
+    border-width: 1px;
 }
 
 header {
@@ -19,6 +20,11 @@ menu {
     margin-bottom: 0;
 }
 
+body {
+    background-color: #4818A6;
+    font-family: sans-serif;
+    margin: 0;
+}
 
 .app {
     background-color: #4818A6;
