cleaned up a comment in app.css, added a password-input id and fixed an error about using the same id (previously id="email-input" was used twice)

--- a/HTML/src/app.css
+++ b/HTML/src/app.css
@@ -158,10 +158,6 @@ a {
     background-color: white;
 }
 
-/* #login-box span{
-    color: #FF00FF;
-} */
-
 #login-text {
     font-size: 400%;
     color: #FF00FF;
@@ -183,6 +179,12 @@ a {
 }
 
 #email-input {
+    width: 250px;
+    height: 50px;
+    font-size: 18pt;
+}
+
+#password-input {
     width: 250px;
     height: 50px;
     font-size: 18pt;
